	Alert ignores human teams instead of AIs
- Civ4lerts
	City-related, Worst Enemy, and Refuses to Talk alerts work for each player in Hot Seat games
	Worst Enemy and Refuses to Talk alerts work with AI AutoPlay
	Worst Enemy alert not shown when team is killed (was showing no-name team)
- Combat Log
	Actual owner of hidden nationality units is not exposed


MODDING

	*** Important: See "Removed EntryPoints Modules" below *** 

New Features:

- BugUtil
	Added export(), exportFunction(), extend(), and extendFunction() for injecting functions into EntryPoints modules
- Configuration
	Added <export> and <extend> XML elements that call exportFunction() and extendFunction() respectively
- BugData
	New API for storing data in CyGame's script data that is 100% compatible with SdToolKit

Improvements:

- Simplified Initialization
	BugInit.init() alone guards against being called twice
	CyGame.isFinalInitialized() used to check if Civ4 is ready
- Removed EntryPoints Modules
	CvAppInterface, CvDiplomacyInterface, CvOptionsScreenCallbackInterface, and CvRandomEventInterface
	If your mod needs to add code to any of these modules, use <export> and <extend> or use the original BTS modules as a base
- PlayerUtil
	players() and teams() now accept active parameter that restrict to players/teams that can become active

Bug Fixes:

- Better Espionage
	Removed unused EspionageEventManager
- AttitudeUtil
	Limits Worst Enemy checks to teams that are alive
- BugUtil Logging
	Unicode encoding errors are caught and ignored in log()


____________________________________________________________________________________________________
BUG 4.3 released February 16th, 2010

CHANGES

New Features:

- Main Interface
	Can choose from three sizes for the build/action buttons
	Added a button to bring up the BUG Options Screen (top left)
- Espionage Advisor
	New layout shows EPs spent against you and icons for passive missions